# case-copilot

./: .gitignore  README.md  pyproject.toml
backend/: agents.py  main.py  mock_generator.py  mockdatagen.py  requirements.txt
backend/agents/: agents.yaml  crewrunner.py  kickoff.py  tasks.yaml  testcase_agent.py
backend/llm/: llmtest.py  local_llm_adapter.py  test_llm_adapter.py
backend/services/: ai_service.py  mock_service.py
backend/tests/: test_actualcrew.py  test_testcase_agent.py
frontend/: index.html  script.js  style.css
